--- a/kubernetes/static-nginx.yaml
+++ b/kubernetes/static-nginx.yaml
@@ -14,7 +14,7 @@ spec:
       containers:
       - name: nginx
         imagePullPolicy: IfNotPresent
-        image: nginx-static:latest
+        image: group3softproject/devops:frontend
         ports:
           - containerPort: 80
             name: http-web-svc
